# judgment-bot

./: .dockerignore  .env.example  Dockerfile  LICENSE  README.md  bot.py  docker-compose.yaml  i18n.py  log.py  pyproject.toml
core/: config.py
i18n/: en.yaml  ja.yaml  ru.yaml  zh-hant.yaml
plugins/: ban_channel.py  del_service_msg.py  delete_guest_bot_messages.py  kick.py  recent_messages.py  start.py  unban.py  verify.py
services/: kick_cooldown_manager.py  recent_message_cache.py  redis_client.py
utils/: aps.py  filters.py  util.py
validator/: __init__.py  base.py  easy_validator.py
