[project]
name = "judgment-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.0",
    "easy-ai18n>=1.0.3",
    "kurigram>=2.2.3",
    "loguru>=0.7.3",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "redis>=6.2.0",
    "tgcrypto>=1.2.5",
]
